# spc

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  DEPLOYMENT.md  LICENCE  MANIFEST.in  PR_DESCRIPTION.md  README.md  USER_GUIDE.md  app.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst
docs/_themes/flask/: theme.conf
docs/_themes/flask_small/: theme.conf
examples/: README.md  defect_tracking.py  demo.py  manufacturing_example.py  service_monitoring.py
scripts/: README.md  build.sh  deploy-test.sh  deploy.sh  release.sh
spcchart/: __init__.py  plotly_chart.py  spc.py  spcchart.py  web.py
tests/: test_flask_app.py  test_plotly_chart.py  test_spc.py  test_spcchart.py
