[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spcchart"
version = "0.24"
description = "SPC Charts For Humans"
readme = "README.md"
authors = [
    {name = "Ben Hughes", email = "bwghughes@gmail.com"}
]
license = {text = "BSD-3-Clause"}
keywords = ["statistics", "spc", "chart", "tool", "process control", "quality", "control chart", "plotly", "visualization", "six sigma", "lean", "manufacturing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
requires-python = ">=3.8"
dependencies = [
    "pygal>=3.0.0",
    "plotly>=5.0.0",
    "shortuuid>=1.0.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bwghughes/spc"
Documentation = "https://statistical-process-control-charts.readthedocs.org/en/latest/"
Repository = "https://github.com/bwghughes/spc"
Issues = "https://github.com/bwghughes/spc/issues"
Changelog = "https://github.com/bwghughes/spc/blob/main/CHANGELOG.md"

[project.scripts]
spcchart = "spcchart:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.coverage.run]
source = ["spcchart"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
